使用redis缓存打印机状态